<?xml version="1.0" encoding="utf-8"?><!--
 This file is part of BBCT for Android.

 Copyright 2012-14 codeguru <codeguru@users.sourceforge.net>

 BBCT for Android is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 BBCT for Android is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scroll_filter"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="2"
        >
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            >
                <CheckBox
                    android:id="@+id/brand_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand"
                    android:textSize="@dimen/option_size"
                />
                <EditText
                    android:id="@+id/brand_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/brand_hint"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            >
                <CheckBox
                    android:id="@+id/year_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textSize="@dimen/option_size"
                />
                <EditText
                    android:id="@+id/year_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/year_hint"
                    android:inputType="number"
                    android:singleLine="true"
                />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/number_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textSize="@dimen/option_size"
                />

                <EditText
                    android:id="@+id/number_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/number_hint"
                    android:inputType="number"
                    android:singleLine="true"
                />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            >
                <CheckBox
                    android:id="@+id/player_name_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_name"
                    android:textSize="@dimen/option_size"
                />
                <EditText
                    android:id="@+id/player_name_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/player_name_hint"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            >
                <CheckBox
                    android:id="@+id/team_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team"
                    android:textSize="@dimen/option_size"
                />
                <EditText
                    android:id="@+id/team_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/team_hint"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                />
            </TableRow>
        </TableLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/check"
        app:layout_anchor="@id/scroll_filter"
        app:layout_anchorGravity="bottom|right|end"
    />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
