<?xml version="1.0" encoding="utf-8"?>
<ListView xmlns:android="http://schemas.android.com/apk/res/android"
          android:id="@+id/card_list"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
/>
