<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of BBCT for Android.

 Copyright 2012 codeguru <codeguru@users.sourceforge.net>

 BBCT for Android is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 BBCT for Android is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">BBCT Lite</string>
    <string name="bbct_title">BBCT Lite - %1$s</string>
    <string name="card_list_title">BBCT Lite</string>
    <string name="card_details_title">BBCT Lite - Card Details</string>
    <string name="filter_cards_title">BBCT Lite - Filter Cards</string>
    <string name="about_title">BBCT Lite - About</string>
    <string name="premium">If you enjoy using BBCT, get the ad-free <a href="market://details?id=bbct.android.premium">premium edition</a> for only $1.99USD.</string>
    <string name="provider_name">BBCT Lite Data</string>

    <string name="read_permission_desc">Read baseball card data.</string>
    <string name="read_permission_label">BBCT Read</string>
    <string name="write_permission_desc">Write baseball card data.</string>
    <string name="write_permission_label">BBCT Write</string>

</resources>
